--- a/site/css/style.css
+++ b/site/css/style.css
@@ -12,10 +12,11 @@
 
 @media (min-width:992px) {
     .box {
-        
+        width: 30%;
     }
 }
 
 .box{
     border: 2px solid #000000;
+    background-color: #9e9e9e;
 }
