--- a/site/css/style.css
+++ b/site/css/style.css
@@ -12,11 +12,24 @@
 
 @media (min-width:992px) {
     .box {
-        width: 30%;
+        display: inline-block;
+        width: 31%;
     }
+}
+
+.menu {
+    text-align: center;
+    font-size: larger;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .box{
     border: 2px solid #000000;
     background-color: #9e9e9e;
+}
+
+body{
+    margin: auto;
+    align-content:stretch;
 }
