--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,20 +1,40 @@
 @media (max-width: 767px) {
+    .col-sm-12 {
+        width: 100%;
+    }
+
     .box {
-        width: 30%;
+        display: inline-block;
     }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-    .box {
-        
+    .col-md-6 {
+        width: 48%;
     }
+
+    .box {
+        display: inline-block;
+    }
+
+
 }
 
 @media (min-width:992px) {
+    .col-lg-4 {
+        width: 30%;
+    }
+
     .box {
         display: inline-block;
-        width: 31%;
     }
+
+}
+
+.text {
+    margin: 10px;
+    float:right;
+    text-align: left;
 }
 
 .menu {
@@ -24,12 +44,46 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.box{
-    border: 2px solid #000000;
-    background-color: #9e9e9e;
+.chicken {
+    border: #000000 solid 2px;
+    float: right;
+    text-align: center;
+    font-size: large;
+    font-weight: 500;
+    background-color: #e99f9f;
+    width: 130px;
 }
 
-body{
-    margin: auto;
+.beef {
+    border: #000000 solid 2px;
+    float: right;
+    text-align: center;
+    font-size: large;
+    font-weight: 500;
+    color: #ffffff;
+    background-color: #751d29;
+    width: 130px;
+}
+
+.sushi {
+    border: #000000 solid 2px;
+    float: right;
+    text-align: center;
+    font-size: large;
+    font-weight: 500;
+    background-color: #e7da9e;
+    width: 130px;
+}
+
+.box{
+    border: 3px solid #000000;
+    background-color: #c0c0c0;
+    margin: 6px;
+    box-sizing: border-box;
+}
+
+.row{
+    text-align: center;
+    display: inline-block;
     align-content:stretch;
 }
